<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C82424"
    tools:context=".fragments.main.RegistrationFragment">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="180dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/app_logo" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Create a new account"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app_logo"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Email"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/createAccount"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/email"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fontFamily="@font/k2d"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/password"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:fontFamily="@font/k2d"
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/repeatPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Repeat Password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/repeatPassword"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/k2d"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text=""
        android:textSize="15sp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/userTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Type of User"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userType"
        app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
        app:layout_constraintVertical_bias="0.01" />

    <Spinner
        android:id="@+id/userType"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:fontFamily="@font/k2d"
        android:spinnerMode="dropdown"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTypeText"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/k2d"
        android:text="Sign Up"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userType"
        app:layout_constraintTop_toBottomOf="@+id/userType"
        app:layout_constraintVertical_bias="0.095" />

    <View
        android:id="@+id/line"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/k2d"
        android:text="Already have an account?"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signUp"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:fontFamily="@font/k2d"
        android:text="Sign In"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signInText"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="@+id/signInText"
        app:layout_constraintTop_toBottomOf="@+id/signInText"
        app:layout_constraintVertical_bias="0.207" />

</androidx.constraintlayout.widget.ConstraintLayout>